add a invest page.

--- a/invest-one.html
+++ b/invest-one.html
@@ -4,7 +4,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta http-equiv="keywords" content="川商贷">
         <meta http-equiv="description" content="川商贷">
-        <title>投资-金仓贷</title>
+        <title>散标投资-金仓贷</title>
 
         <link href="css/public.css" type="text/css" rel="stylesheet" />
         <link href="css/style.css" type="text/css" rel="stylesheet" />
@@ -125,71 +125,7 @@
             </table>
 
 
-        </div>
-
-        <div class="con">
-
-            <div class="shaixuan mt50">
-                <div class="col-7">
-                    <h4 class="lh30">筛选债权转让项目</h4>
-                    <dl class="sxdl clearfix mt10"><dt>标的类型：</dt><dd class="clearfix"><a class="on">不限</a><a>信用认证标</a><a>实地认证标</a><a>机构担保标</a><a>智能理财标</a></dd></dl>
-                    <dl class="sxdl clearfix mt10"><dt>剩余期限：</dt><dd class="clearfix"><a class="on">不限</a><a>6个月及以下</a><a>7-12个月</a><a>13-24个月</a><a>25个月及以上</a></dd></dl>
-                    <dl class="sxdl clearfix mt10"><dt>认证等级：</dt><dd class="clearfix"><a class="on">不限</a><a>AA</a><a>A</a><a>B</a><a>C</a><a>D</a><a>E</a><a>HR</a></dd></dl>
-                </div>
-                <div class="col-3">
-                    <h2>新手引导</h2>
-
-                    <a href="#">什么是债权转让？</a>
-                    <a href="#">债权的价值是如何计算的？</a>
-                    <a href="#">债权的转让价格是如何确定的？</a>
-                    <a href="#">债权转让说明书</a>
-                </div>
-                <div class="clear-col"></div>
-            </div>
-
-            <table width="100%" border="0" cellspacing="0" cellpadding="0" class="tz_tab mt20 mb20">
-                <tr>
-                    <th scope="col" width="20%">债权项目</th>
-                    <th scope="col">年化收益率</th>
-                    <th scope="col">转让金额</th>
-                    <th scope="col">剩余期数</th>
-                    <th scope="col">到期收益</th>
-                    <th scope="col">操作</th>
-                </tr>
-            
-                <tr class="ft12">
-                    <td scope="col" width="20%">标题</td>
-                    <td scope="col"><span class="ft18">11.00</span>%</td>
-                    <td scope="col"><span class="ft18">¥ 90.000</span>元</td>
-                    <td scope="col"><span class="ft18">1</span>期</td>
-                    <td scope="col"><span class="ft18">4224.00</span>元</td>
-                    <td scope="col"><a class="tzbtn">投资</a></td>
-                </tr>
-                <tr class="ft12">
-                <td scope="col" width="20%">标题</td>
-                <td scope="col"><span class="ft18">11.00</span>%</td>
-                <td scope="col"><span class="ft18">¥ 90.000</span>元</td>
-                <td scope="col"><span class="ft18">1</span>期</td>
-                <td scope="col"><span class="ft18">4224.00</span>元</td>
-                <td scope="col"><a class="tzbtn">详情</a></td>
-                </tr>
-                <tr class="ft12">
-                <td scope="col" width="20%">标题</td>
-                <td scope="col"><span class="ft18">11.00</span>%</td>
-                <td scope="col"><span class="ft18">¥ 90.000</span>元</td>
-                <td scope="col"><span class="ft18">1</span>期</td>
-                <td scope="col"><span class="ft18">4224.00</span>元</td>
-                <td scope="col"><a class="tzbtn">投资</a></td>
-                </tr>
-                <tr class="ft12">
-                <td scope="col" width="20%">标题</td>
-                <td scope="col"><span class="ft18">11.00</span>%</td>
-                <td scope="col"><span class="ft18">¥ 90.000</span>元</td>
-                <td scope="col"><span class="ft18">1</span>期</td>
-                <td scope="col"><span class="ft18">4224.00</span>元</td>
-                <td scope="col"><a class="tzbtn">投资</a></td>
-                </tr>
-            </table>
+            <div class="pages mb20"><a href="#">首页</a><a href="#">上一页</a><a href="#"  class="now">1</a><a href="#">2</a><a href="#">3</a><a href="#">上一页</a><a href="#">下一页</a><a href="#">尾页</a><span>共3页</span></div>
 
 
         </div>
