--- a/help.html
+++ b/help.html
@@ -109,7 +109,7 @@
         <div class="footer">
             <div style="width:1000px; margin:0 auto">
                 <div style="width:80%" class="tal fl">
-                    <dl class="friends clearfix"><dt>友情链接</dt><dd><a href="#">华夏川商融资担保</a><a href="#">华夏川商建设</a><a href="#">华夏川商联合投资控股</a></dd></dl>
+                    <dl class="friends clearfix"><dt><span class="c999">友情链接</span></dt><dd><a href="#">重庆斌鑫集团有限公司</a><a href="#">四川创业融资担保有限公司</a><a href="#">重庆海雄名车</a></dd></dl>
                 </div>
                 <div style="width:20%" class="tar fl">
                     <img src="images/test-qrcode.jpg" style="width:100px;">
