--- a/account-fund-out.html
+++ b/account-fund-out.html
@@ -38,7 +38,7 @@
                         <a href="invest.html">我要投资</a>
                         <ul>
                             <li class="sub-nav-icon"><span></span></li>
-                            <li><a href="invest.html">散标投资</a></li>
+                            <li><a href="invest-one.html">散标投资</a></li>
                             <li><a href="transfer.html">债权转让</a></li>
                         </ul>
                     </li>
