new invest page.

--- a/invest-one.html
+++ b/invest-one.html
@@ -71,9 +71,9 @@
 
             <div class="shaixuan mt20">
                 <h4 class="lh30">筛选投资项目</h4>
-                <dl class="sxdl clearfix mt10"><dt>借款期限：</dt><dd class="clearfix"><a class="on">不限</a><a>1个月</a><a>2个月</a><a>3个月</a><a>3-6个月</a><a>6个月以上</a></dd></dl>
-                <dl class="sxdl clearfix mt10"><dt>借款金额：</dt><dd class="clearfix"><a class="on">不限</a><a>0-10万</a><a>10-20万</a><a>20-50万</a><a>50-100万</a><a>100万以上</a></dd></dl>
-                <dl class="sxdl clearfix mt10"><dt>投资进度：</dt><dd class="clearfix"><a class="on">不限</a><a>20%以内</a><a>20%-50%</a><a>50%-80%</a><a>80%-100%</a></dd></dl>
+                <dl class="sxdl clearfix mt10"><dt>借款期限：</dt><dd class="clearfix"><a class="on">不限</a><a class="fit">1个月</a><a class="fit">2个月</a><a class="fit">3个月</a><a class="fit">3-6个月</a><a class="fit">6个月以上</a></dd></dl>
+                <dl class="sxdl clearfix mt10"><dt>借款金额：</dt><dd class="clearfix"><a class="on">不限</a><a class="fit">0-10万</a><a class="fit">10-20万</a><a class="fit">20-50万</a><a class="fit">50-100万</a><a class="fit">100万以上</a></dd></dl>
+                <dl class="sxdl clearfix mt10"><dt>投资进度：</dt><dd class="clearfix"><a class="on">不限</a><a class="fit">20%以内</a><a class="fit">20%-50%</a><a class="fit">50%-80%</a><a class="fit">80%-100%</a></dd></dl>
             </div>
 
             <table width="100%" border="0" cellspacing="0" cellpadding="0" class="tz_tab mt20">
