new account page

--- a/account.html
+++ b/account.html
@@ -110,10 +110,17 @@
                         <div class="fl" style="width:500px;">
                             <div>账户余额 <a href="#" class="ml20 c08c">刷新</a></div>
                             <div><span class="ce80 mr5"><span class=" ft24">00000</span>.00</span>元 <a href="account-bank-to.html" class="ml20 caozuo">从银行划入</a><a href="account-to-bank.html" class="ml10 caozuo">转出到银行</a><a href="#" class="ml10 caozuo">投资</a></div>
-                            <div class="rzzt"><a href="account-certify.html"><i class="png i_sf mr5"></i>未认证</a><span class="ml10 c999"><i class="png i_yx2 mr5"></i>已绑定</span><span class="ml10 c999"><i class="png i_sj2 mr5"></i>已绑定</span></div>
+                            
+                            <div class="new-rzzt">
+                                <a href="account-certify.html" class="item un certify"><i></i>未认证</a>
+                                <a href="account-email.html" class="item un email"><i></i>未认证</a>
+                                <a href="account-phone.html" class="item un phone"><i></i>未认证</a>
+                                <a href="#" class="item un card"><i></i>绑定银行卡</a>
+                                <a href="#" class="item card"><i></i>已绑定</a>
+                            </div>
                         </div>
 
-                        <div class="fr" style="width:200px;">
+                        <div class="fr hidden" style="width:200px;">
                             <div class="tjcard"><a href="#"><i class="png"></i>添加银行卡</a></div>
                             <div class="lh30"><span>·畅享快捷</span><span class="ml20">·双密码保护</span></div>
 
