account page preview.

--- a/account.html
+++ b/account.html
@@ -114,9 +114,9 @@
                             <div class="new-rzzt">
                                 <a href="account-certify.html" class="item un certify"><i></i>未认证</a>
                                 <a href="account-email.html" class="item un email"><i></i>未认证</a>
-                                <a href="account-phone.html" class="item un phone"><i></i>未认证</a>
+                                <a href="account-phone.html" class="item phone"><i></i>未认证</a>
+                                <a href="#" class="item un phone"><i></i>已认证</a>
                                 <a href="#" class="item un card"><i></i>绑定银行卡</a>
-                                <a href="#" class="item card"><i></i>已绑定</a>
                             </div>
                         </div>
 
