修改了首页-投资项目一块的一个图标，使得3个图标同时显示。

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                     <td><a href="trade-details.html" class="tzbtn fr">投标</a></td>
                 </tr>
                 <tr>
-                    <td class="xmm"><img src="images/ico-shidirenzheng.png" /><a href="#">大众朗逸</a> </td>
+                    <td class="xmm"><img src="images/ico-jigoudanbao.png" /><a href="#">大众朗逸</a> </td>
                     <td><span class="y-rate">9.5</span>%</td>
                     <td>100万</td>
                     <td><strong class="ui-progressbar-mid ui-progressbar-mid-55"><em>55</em>%</strong></td>
