--- a/security.html
+++ b/security.html
@@ -68,8 +68,7 @@
 
         <div class="con security-con">
             <div class="pb20">
-
-                <h2 class="lh48 mb10 security-title-1"><span>资金安全保障</span></h2>
+                <div class="security-title-1"></div>
                 <div class="security-content mt40">
 	                <p class="ft14 lh24">金仓贷与人民银行批准的第三方支付平台易极付合作，资金托管更安全、更可靠。</p>
 	                <p class="ft14 lh24">我们使用更先进的银行级保障模式，用户单独开户，所有交易均由用户操作，资金通过易极付直接划转，完全保证用户对账号的独立掌控。金仓贷以明确的中间服务隔离用户资金，第三方支付系统严格的交易管控分离用户账户。</p>
@@ -106,7 +105,7 @@
                     <img src="images/test-qrcode.jpg" style="width:100px;">
                 </div>
                 <div class="clear-col"></div>
-                <div class="tac p20">版权所有 © 重庆骐特·金仓贷 渝ICP备00000000号</div>
+                <div class="tac p20">版权所有 © 重庆骐特·金仓贷 粤ICP备14091442号</div>
                 <div class="clearfix"></div>
             </div>
         </div>
