--- a/trade-financing.html
+++ b/trade-financing.html
@@ -105,7 +105,7 @@
 
         <div class="footer">
             <dl class="friends clearfix"><dt><span class="c999">友情链接</span></dt><dd><a href="#">重庆斌鑫集团有限公司</a><a href="#">四川创业融资担保有限公司</a><a href="#">重庆海雄名车</a></dd></dl>
-            <div class="tac p20">版权所有 © 川商贷 未经许可不得复制、转载或摘编，违者必究! &nbsp;&nbsp; 渝ICP备00000000号</div>
+            <div class="tac p20">版权所有 © 川商贷 未经许可不得复制、转载或摘编，违者必究! &nbsp;&nbsp; 粤ICP备14091442号</div>
         </div>
     </body>
 </html>
