--- a/transfer.html
+++ b/transfer.html
@@ -70,21 +70,34 @@
         <div class="con">
 
             <div class="shaixuan">
-                <div class="col-7">
-                    <h4 class="lh30">筛选债权转让项目</h4>
-                    <dl class="sxdl clearfix mt10"><dt>标的类型：</dt><dd class="clearfix"><a class="on">不限</a><a>信用认证标</a><a>实地认证标</a><a>机构担保标</a><a>智能理财标</a></dd></dl>
-                    <dl class="sxdl clearfix mt10"><dt>剩余期限：</dt><dd class="clearfix"><a class="on">不限</a><a>6个月及以下</a><a>7-12个月</a><a>13-24个月</a><a>25个月及以上</a></dd></dl>
-                    <dl class="sxdl clearfix mt10"><dt>认证等级：</dt><dd class="clearfix"><a class="on">不限</a><a>AA</a><a>A</a><a>B</a><a>C</a><a>D</a><a>E</a><a>HR</a></dd></dl>
-                </div>
-                <div class="col-3">
-                    <h2>新手引导</h2>
-
-                    <a href="#">什么是债权转让？</a>
-                    <a href="#">债权的价值是如何计算的？</a>
-                    <a href="#">债权的转让价格是如何确定的？</a>
-                    <a href="#">债权转让说明书</a>
-                </div>
-                <div class="clear-col"></div>
+                <h4 class="lh30">筛选投资项目</h4>
+                <dl class="sxdl clearfix mt10"><dt> 剩余期限：</dt>
+                    <dd class="clearfix">
+                        <a begin="" end="" name="term" class="on">不限</a>
+                        <a class="fit" begin="0" end="1" name="term">1个月</a>
+                        <a class="fit" begin="1" end="3" name="term">2个月</a>
+                        <a class="fit" begin="3" end="6" name="term">3个月</a>
+                        <a class="fit" begin="6" end="9" name="term">3-6个月</a>
+                        <a class="fit" begin="9" end="12" name="term">6个月以上</a>
+                    </dd>
+                </dl>
+                <dl class="sxdl clearfix mt10"><dt>转让金额：</dt>
+                    <dd class="clearfix">
+                        <a begin="" end="" name="amount" class="on">不限</a>
+                        <a class="fit" begin="0" end="500000" name="amount">0-10万</a>
+                        <a class="fit" begin="500000" end="1000000" name="amount">10-20万</a>
+                        <a class="fit" begin="1000000" end="5000000" name="amount">20-50万</a>
+                        <a class="fit" begin="5000000" end="10000000" name="amount">50-100万</a>
+                        <a class="fit" begin="10000000" end="50000000" name="amount">100万以上</a>
+                    </dd>
+                </dl>
+                <dl class="sxdl clearfix mt10"><dt>p2p产品：</dt>
+                    <dd class="clearfix">
+                        <a key="" name="productId" class="on">不限</a>
+                        <a class="fit" key="0" name="productId">车易贷</a>
+                        <a class="fit" key="1" name="productId">兴业贷</a>
+                    </dd>
+                </dl>
             </div>
 
             <div class="transfer-list bor mt20">
