page of security

--- a/security.html
+++ b/security.html
@@ -68,28 +68,77 @@
 
         <div class="con security-con">
             <div class="pb20">
-                <div class="security-title-1"></div>
-                <div class="security-content mt40">
-	                <p class="ft14 lh24">金仓贷与人民银行批准的第三方支付平台易极付合作，资金托管更安全、更可靠。</p>
-	                <p class="ft14 lh24">我们使用更先进的银行级保障模式，用户单独开户，所有交易均由用户操作，资金通过易极付直接划转，完全保证用户对账号的独立掌控。金仓贷以明确的中间服务隔离用户资金，第三方支付系统严格的交易管控分离用户账户。</p>
-	            </div>
-                <br>
-                <h2 class="lh48 mb10 security-title-2"><span>项目风险保障</span></h2>
-                <div class="security-content mt40">
-	                <p class="ft14 lh24">在融资者提出申请后，我们优先审核融资项目安全性，为投资客户筛选放心项目。</p>
-	                <p class="ft14 lh24">车宜贷对融资人的审核不仅包括车龄、行驶里程、车辆价值等车辆信息的评估，还包含对车主信息、车主征信等相关资料的核实。我们严格控制车辆质押借款不高于评估价七折的原则，在融资者发生违约后，金仓贷能以较低的价格、较快的速度处置二手车，第一时间保障投资者的投资与收益。</p>
-	            </div>
-                <br>
-                <h2 class="lh48 mb10 security-title-3"><span>项目担保保障</span></h2>
-                <div class="security-content mt40">
-	                <p class="ft14 lh24">金仓贷与四川创业融资担保有限公司（成立于2004年、注册资金10.7亿元）已达成初步合作意向。前期，四川创业融资担保有限公司将为金仓贷的融资项目提供独立的二次风控审核，为后续金仓贷与其建立长期合作——对车易贷产品提供项目担保打下基础。除此之外，四川创业融资担保有限公司还将为金仓贷违约资产处置提供合法、快速通道，第三方资产处置有效完善了金仓贷的安全保障体系，为投资者甄选安全稳赢的投资项目。</p>
-	            </div>
-                <br>
-                <h2 class="lh48 mb10 security-title-4"><span>风险准备金垫付 违约赔付有保障</span></h2>
-                <div class="security-content mt40">
-	                <p class="ft14 lh24">为充分保障用户的利益，更好的进行自我监管，金仓贷与招商银行重庆分行就金仓贷风险备用金托管问题签署协议。</p>
-	                <p class="ft14 lh24">招商银行重庆分行将对金仓贷的风险准备金专户资金进行独立托管，一旦借款人发生违约（逾期还款超过30日时），金仓贷将按照“风险备用金账户资金使用规则”从该账户中提取相应资金用于偿付投资者在该笔受保障借款项下剩余未还本金或剩余未还本金和逾期当期利息金额。每月针对风险备用金专户资金实际进出情况出具托管报告。</p>
-	            </div>
+                <div class="row">
+                    <div class="col-xs-7">
+                        <div class="security-s security-s-1"><strong>用户安心</strong>：第三方交易资金托管</div>
+                        <div class="row mt20">
+                            <div class="col-xs-11">
+                                <p class="ft18"> 金仓贷与人民银行批准的第三方支付平台易极付合作，托管资金采用更安全、更可靠、更先进的银行级保障模式。</p>
+                                <p class="ft18">用户单独开户，所有交易均由用户操作，资金通过易极付直接划转，完全保证用户对账户的独立掌控。金仓贷以明确的中间服务隔离用户资金，第三方支付系统严格的交易管控分离用户账户，资金托管为金仓贷的合法、安全运营保驾护航。</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xs-5"><div class="security-img security-img-1"></div></div>
+                </div>
+                
+                <div class="star-line right"><div class="line"></div><div class="star"></div></div>
+
+                <div class="row mt40">
+                    <div class="col-xs-5"><div class="security-img security-img-2"></div></div>
+                    <div class="col-xs-7">
+                        <div class="security-s security-s-2"><strong>服务贴心</strong>：用户信息保密</div>
+                        <div class="row mt20">
+                            <div class="col-xs-1"></div>
+                            <div class="col-xs-11">
+                                <p class="ft18">    金仓贷平台内部已建立严格隐私保密体系，在任何情况下绝不出售、出租或以其他形式泄漏用户的信息。网站发布信息时，将采取适当措施和方法，以保护用户信息的安全，为您提供服务贴心的一流服务。</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="star-line left"><div class="line"></div><div class="star"></div></div>
+
+                <div class="row mt40">
+                    <div class="security-s security-s-3"><strong>项目放心</strong>：知名担保公司专业风险审核</div>
+                    <div class="col-xs-7">
+                        <div class="row mt20">
+                            <div class="col-xs-11">
+                                <p class="ft18">我们严格遵循车辆质押借款金额不高于车辆二手评估价八折的原则，根据抵、质押车辆的车龄、行驶里程、车辆状况等基本信息，使用第三方专业二手车评估软件对抵、质押车辆做二手车市场价值评定，同时还将综合考查借款人的征信及还款来源，对其申请的贷款金额进行最终评定。</p>
+                                <p class="ft18">此外，我们与四川创业融资担保有限公司（成立于2004年，注册资金10.7亿元）达成初步合作意向。前期，四川创业融资担保有限公司将为金仓贷的融资项目提供独立的二次风控审核。为后续金仓贷与其建立长期合作——对车易贷产品提供项目担保打下基础。双重风险审核进一步增强了对融资项目的风险审查，为投资者甄选放心项目。</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xs-5"><div class="security-img security-img-3"></div></div>
+                </div>
+
+                <div class="star-line right"><div class="line"></div><div class="star"></div></div>
+
+                <div class="row mt40">
+                    <div class="col-xs-5"><div class="security-img security-img-4"></div></div>
+                    <div class="col-xs-7">
+                        <div class="security-s security-s-4"><strong>安全信心</strong>：设立风险准备金专户</div>
+                        <div class="row mt20">
+                            <div class="col-xs-1"></div>
+                            <div class="col-xs-11">
+                                <p class="ft18">为了更充分保障投资者利益，更好的进行自我监管，金仓贷与招商银行重庆分行签署了风险准备金托管协议。招商银行重庆分行将对金仓贷的风险准备金专户资金进行独立托管，一旦借款人发生违约，金仓贷将在15个工作日内按照风险准备金“资金运用用途规定”，从该账户中提取相应资金用于偿付投资者在该笔受保障借款项下剩余未还本金和利息。招商银行重庆分行每月针对风险备用金专户资金实际进出情况出具托管报告。</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="star-line left"><div class="line"></div><div class="star"></div></div>
+
+                <div class="row mt40">
+                    <div class="col-xs-7">
+                        <div class="security-s security-s-5"><strong>将心比心</strong>：第三方平台资产处置</div>
+                        <div class="row mt20">
+                            <div class="col-xs-11">
+                                <p class="ft18">金仓贷严格遵循国家相关法律法规。为了预防融资项目违约产生的风险，保障投资者的资金安全与收益。四川创业融资担保有限公司将为金仓贷处置违约车辆提供合法、快速通道，最短时间内处置违约车辆。</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xs-5"><div class="security-img security-img-5"></div></div>
+                </div>
 
             </div>
         </div>
