修改幻灯片图片

--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
             <!-- 图片切换代码 开始 -->
             <div id="full-screen-slider">
                 <ul id="slides">
-                    <li bgcolor="#f0f0f0" style="background:url('upload/ad01.jpg') no-repeat center top;"><a href="#">&nbsp;</a></li>
-                    <li bgcolor="#5eafe7" style="background:url('upload/ad02.jpg') no-repeat center top;"><a href="#">&nbsp;</a></li>
-                    <li bgcolor="#5db8d5" style="background:url('upload/ad03.jpg') no-repeat center top;"><a href="#">&nbsp;</a></li>
+                    <li bgcolor="#f0f0f0" style="background:url('upload/slide-1.jpg') no-repeat center top;"><a href="#">&nbsp;</a></li>
+                    <li bgcolor="#5eafe7" style="background:url('upload/slide-2.jpg') no-repeat center top;"><a href="#">&nbsp;</a></li>
+                    <li bgcolor="#5db8d5" style="background:url('upload/slide-3.jpg') no-repeat center top;"><a href="#">&nbsp;</a></li>
                 </ul>
             </div>
             <div class="slidexia"></div>
