--- a/invest-one.html
+++ b/invest-one.html
@@ -83,7 +83,7 @@
                     <th scope="col">需求金额</th>
                     <th scope="col">投资进度</th>
                     <th scope="col">期限</th>
-                    <th scope="col">担保公司</th>
+                    <th scope="col">产品类型</th>
                     <th scope="col" width="12%">操作</th>
                 </tr>
                 <tr>
@@ -92,7 +92,7 @@
                     <td>100万</td>
                     <td>60%</td>
                     <td>6个月</td>
-                    <td>四川创业融资担保有限公司</td>
+                    <td>车辆质押</td>
                     <td><a href="trade-details.html" class="tzbtn">投标</a></td>
                 </tr>
                 <tr>
@@ -101,25 +101,25 @@
                     <td>100万</td>
                     <td>60%</td>
                     <td>6个月</td>
-                    <td>四川创业融资担保有限公司</td>
+                    <td>车辆抵押</td>
                     <td><a href="trade-details.html" class="tzbtn">投标</a></td>
                 </tr>
                 <tr>
-                    <td class="xmm"><img src="images/ico-xinyongrenzheng.png" /><a href="#">门店装修及采购资金</a> </td>
+                    <td class="xmm"><img src="images/ico-xinyongrenzheng.png" /><a href="#">大众朗逸</a> </td>
                     <td><span class="y-rate">99.5</span>%</td>
                     <td>100万</td>
                     <td>60%</td>
                     <td>6个月</td>
-                    <td>四川创业融资担保有限公司</td>
+                    <td>项目担保</td>
                     <td><a href="trade-details.html" class="tzbtn">投标</a></td>
                 </tr>
                 <tr>
-                    <td class="xmm"><img src="images/ico-jigoudanbao.png" /><a href="#">门店装修及采购资金</a> </td>
+                    <td class="xmm"><img src="images/ico-jigoudanbao.png" /><a href="#">大众朗逸</a> </td>
                     <td><span class="y-rate">99.5</span>%</td>
                     <td>100万</td>
                     <td>100%</td>
                     <td>6个月</td>
-                    <td>四川创业融资担保有限公司</td>
+                    <td>项目担保</td>
                     <td><a class="tzbtn tzbtn2">详情</a></td>
                 </tr>
             </table>
