--- a/account-message.html
+++ b/account-message.html
@@ -72,8 +72,9 @@
                 <h2 class="mt20 pl20 borb2 lh48">账户管理</h2>
                 <ul id="subMenu" class="left_ul">
                     <li>
-                        <a href="account.html">我的账户</a><i class="png"></i>
+                        <a href="#">我的账户</a><i class="png"></i>
                         <ol class="pb20 pt5">
+                            <a href="account.html">我的账户</a>
                             <li><a href="account-bank-to.html">从银行划入</a></li>
                             <li><a href="account-to-bank.html">转出到银行</a></li>
                             <li><a href="account-info-in.html">充值记录查询</a></li>
@@ -82,22 +83,24 @@
                         </ol>
                     </li>
                     <li>
-                        <a href="account-invest.html">投资查询</a><i class="png"></i>
+                        <a href="#">投资查询</a><i class="png"></i>
                         <ol class="pb20 pt5">
+                            <a href="account-invest.html">投资查询</a>
                             <li><a href="account-income-info.html">收益查询</a></li>
                             <li><a href="account-trade-info.html">交易查询</a></li>
                         </ol>
                     </li>
                     <li>
-                        <a href="account-fund.html">融资项目管理</a><i class="png"></i>
+                        <a href="#">融资项目管理</a><i class="png"></i>
                         <ol class="pb20 pt5">
+                            <a href="account-fund.html">融资项目管理</a>
                             <li><a href="account-fund-apply.html">融资项目申请</a></li>
                             <li><a href="account-fund-out.html">融资款提取</a></li>
                             <li><a href="account-fund-in.html">融资项目还款</a></li>
                         </ol>
                     </li>
                     <li><a href="account-safe.html">安全中心</a></li>
-                    <li><a href="account-message.html" class="c900">消息中心</a></li>
+                    <li><a href="account-message.html">消息中心</a></li>
                 </ul>
             </div> 
 
