修改“关于我们”各个子菜单页面。

--- a/company-intro.html
+++ b/company-intro.html
@@ -85,8 +85,17 @@
                     <div class="right_con mt20">
 
                         <div>
-                            <p>深圳前海骐特互联网金融服务有限公司是重庆骐特资产管理有限公司旗下全资子公司，注册资金1000万元人民币,是国内最早注册拥有互联网金融服务营业执照的互联网金融服务有限公司之一。</p>
-                            <p>公司秉承“以人为本、客户至上、勇于创新”的企业理念，顺应金融互联网化的发展方向，严格遵守国家相关法律法规及地方政策，以健全的风险控制、标准化操作、透明化管理创建“骐特•金仓贷”P2P网络借贷服务平台。“骐特•金仓贷”立足重庆本地市场，通过专业的线下风控团队，将机动车质押与网络借贷相结合，为小微企业融资及“草根”理财提供全新选择。</p>
+                            <img class="mb20" src="upload/pic-company.jpg">
+                            <p>深圳市前海骐特互联网金融服务有限公司是重庆骐特资产管理有限公司联合互联网行业资深专家共同发起设立，注册资金1000万元人民币，拥有互联网金融服务营业执照的网络金融服务有限公司。</p>
+                            <p>公司秉承“以人为本、客户至上、勇于创新”的企业理念，顺应金融互联网化的发展趋势，严格遵守国家相关法律法规及地方政策，以健全的风险控制、标准化操作、透明化管理创建“骐特•金仓贷”P2P网络借贷服务平台。“骐特•金仓贷”立足重庆本地市场，通过专业的线下风控团队，将机动车质押与网络借贷相结合，为小微企业融资及个人理财提供全新选择。</p>
+                            <br>
+                            <h4 style="text-align:left;">★&nbsp;企业理念&nbsp;★</h4>
+                            <p>轻松贷款  快乐投资 让金融服务无边界</p>
+                            <h4 style="text-align:left;">★&nbsp;企业文化&nbsp;★</h4>
+                            <p>诚信为本、创新为魂、居安思危、自强不息！</p>
+                            <h4 style="text-align:left;">★&nbsp;企业愿景&nbsp;★</h4>
+                            <p>立足本地——打造重庆最大的汽车类借贷服务平台</p> 
+                            <p>放眼全国——争创国内一流的互联网金融服务企业</p>
 
                         </div>
 
