--- a/contact-us.html
+++ b/contact-us.html
@@ -86,7 +86,8 @@
 
                         <div>
                             <p>地址： 重庆渝北区龙山大道111号龙湖紫都城2-3栋2-6号</p>
-                            <p>客服电话：（暂缺）</p>
+                            <p>客服电话：023-67116701</p>
+                            <p>全国统一客服热线：4006-855-966</p>
                             <p>公司邮箱：service@goldloan.com.cn</p> 
                             <p>公司网址：www.goldloan.com.cn</p> 
                             <p><span>官方微信：</span><img style="vertical-align:-140px" src="images/test-qrcode.jpg"></p>
