--- a/product-intro.html
+++ b/product-intro.html
@@ -85,9 +85,10 @@
                     <div class="right_con mt20">
 
                         <div>
-                            <p><img src="images/ico-xinyongrenzheng.png"><span class="ft20 lh48 ml10">微商贷 </span>针对中小商户短期融资需求，推出的5—20万信用贷款。</p>
-                            <p><img src="images/ico-shidirenzheng.png"><span class="ft20 lh48 ml10">车宜贷 </span>针对有短期小额需求的客户，推出机动车质押贷款，为客户提供便捷快速的融资需求。</p>
-                            <p><img src="images/ico-jigoudanbao.png"><span class="ft20 lh48 ml10">兴业贷 </span>金仓贷推出的企业贷款，着力为中小企业解决融资难，可为中小企业解决200万以下融资。</p>
+                            <!-- <p><img src="images/ico-xinyongrenzheng.png"><span class="ft20 lh48 ml10">微商贷 </span>针对中小商户短期融资需求，推出的5—20万信用贷款。</p> -->
+                            <p><img src="images/ico-shidirenzheng.png"><strong class="ft20 lh48 ml10">车宜贷 </strong>金仓贷针对个人及私营业主短期、小额资金需求，推出的以机动车抵、质押的融资产品。申请人可提供机动车作为贷款的抵、质押物，通过金仓贷发布借款信息，向投资者借出所需资金。</p>
+                            <br>
+                            <p><img src="images/ico-jigoudanbao.png"><strong class="ft20 lh48 ml10">兴业贷 </strong>金仓贷为解决中小企业融资难、融资贵推出的高额长期融资产品。申请该产品的企业须注册成立3年以上，提供相关经营状况材料、还款能力证明，具备相应的足额资产作为抵押或提供担保公司出具的项目担保函。</p>
                         </div>       
                     </div>
 
