--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div class="banner">
             <div class="login_layer">
                 <div class="loginbox">
-                    <h5 class="yahei white">登录联付通</h5>
+                    <h5 class="yahei white">登录金仓贷</h5>
                     <div class="logsel"><label class="png label_1"></label><input type="text" value="用户名" class="text" /></div>
                     <div class="logsel"><label class="png label_2"></label><input type="text" value="登录密码" class="text" /></div>
                     <div class="logsel"><label class="png label_3"></label><input type="text" value="验证码" class="text" style="width:80px;" /><img src="upload/yzm.jpg" class="yzm" /></div>
