--- a/account.html
+++ b/account.html
@@ -108,6 +108,17 @@
                 <div class="p40 pt20">
 
                     <div class="clearfix lh48" style=" border-bottom:2px solid #ccc;"><div class="fl ft14">您好，月亮 ( 编号：yjK11785 )  <a href="account-info.html" class="ml20 c08c">账户资料</a></div><div class="fr c999">上次登录时间：2014-07-14 11:38:48</div></div>
+                    
+                    <!-- notice -->
+
+                    <div class="notice">
+                        <i></i>
+                        <div class="content">
+                            <p>这里是提示段1，这里是提示段1，这里是提示段1，这里是提示段1，这里是提示段1</p>
+                            <p>这里是提示段2</p>
+                        </div>
+                        <div class="clear-col"></div>
+                    </div>
 
                     <div class="clearfix wdzh">
                         <div class="fl" style="width:500px;">
