--- a/account-bank-to.html
+++ b/account-bank-to.html
@@ -109,6 +109,14 @@
                     <input type="hidden" id="bankCode" name="bankCode" value="">
                     <div class="p40 pt20">
                         <h2 class="title"><span>从银行划入</span></h2>
+                        <div class="notice">
+                            <i></i>
+                            <div class="content">
+                                <p>这里是提示段1，这里是提示段1，这里是提示段1，这里是提示段1，这里是提示段1</p>
+                                <p>这里是提示段2</p>
+                            </div>
+                            <div class="clear-col"></div>
+                        </div>
                         <table width="100%" border="0" cellspacing="0" cellpadding="0" class="tab mt20">
                             <tbody>
                                 <tr>
@@ -144,10 +152,10 @@
                     <dl class="friends clearfix"><dt><span class="c999">友情链接</span></dt><dd><a href="#">重庆斌鑫集团有限公司</a><a href="#">四川创业融资担保有限公司</a><a href="#">重庆海雄名车</a></dd></dl>
                 </div>
                 <div style="width:20%" class="tar fl">
-                    <img src="images/test-qrcode.jpg" style="width:100px;">
+                    <!-- <img src="images/test-qrcode.jpg" style="width:100px;"> -->
                 </div>
-                <div class="tac p20">版权所有 © 重庆骐特·金仓贷 粤ICP备14091442号</div>
                 <div class="clearfix"></div>
+                <div class="tac p20">版权所有 © 重庆骐特·金仓贷 粤ICP备14091442号</div>
             </div>
         </div>
 
