--- a/account-fund-in.html
+++ b/account-fund-in.html
@@ -182,10 +182,10 @@
                     <dl class="friends clearfix"><dt><span class="c999">友情链接</span></dt><dd><a href="#">重庆斌鑫集团有限公司</a><a href="#">四川创业融资担保有限公司</a><a href="#">重庆海雄名车</a></dd></dl>
                 </div>
                 <div style="width:20%" class="tar fl">
-                    <img src="images/test-qrcode.jpg" style="width:100px;">
+                    <!-- <img src="images/test-qrcode.jpg" style="width:100px;"> -->
                 </div>
-                <div class="tac p20">版权所有 © 重庆骐特·金仓贷 粤ICP备14091442号</div>
                 <div class="clearfix"></div>
+                <div class="tac p20">版权所有 © 重庆骐特·金仓贷 粤ICP备14091442号</div>
             </div>
         </div>
 
