--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
         </div>
 
-        <div class="header">
+        <div class="header nbr">
             <div class="w1100 mc">
                 <a href="index.html" class="logo"><img src="images/logo.png" /></a>
                 <ul class="nav">
@@ -94,7 +94,7 @@
                 <div class="col-xs-5">
                     <div class="intro">
                         <h2 class="c900">什么是车宜贷?</h2>
-                        <p class="ft14">金仓贷针对手中持有小额闲置资金的投资客户,推出以机动 车为抵、质押物的投资产品。投资者可通过金仓贷选择自己 喜欢的项目,向融资者借出资金。<a href="security.html" class="c900">了解更多&gt;</a></p>
+                        <p class="ft14">金仓贷针对手中持有小额闲置资金的投资客户,推出以机动车为抵、质押物的投资产品。投资者可通过金仓贷选择自己喜欢的项目,向融资者借出资金。<a href="security.html" class="c900">了解更多&gt;</a></p>
                     </div>
                 </div>
                 <div class="col-xs-1"></div>
@@ -177,10 +177,10 @@
                     <dl class="friends clearfix"><dt><span class="c999">友情链接</span></dt><dd><a href="#">重庆斌鑫集团有限公司</a><a href="#">四川创业融资担保有限公司</a><a href="#">重庆海雄名车</a></dd></dl>
                 </div>
                 <div style="width:20%" class="tar fl">
-                    <img src="images/test-qrcode.jpg" style="width:100px;">
+                    <!-- <img src="images/test-qrcode.jpg" style="width:100px;"> -->
                 </div>
-                <div class="tac p20">版权所有 © 重庆骐特·金仓贷 粤ICP备14091442号</div>
                 <div class="clearfix"></div>
+                <div class="tac p20">版权所有 © 重庆骐特·金仓贷 粤ICP备14091442号</div>
             </div>
         </div>
 
