--- a/transfer.html
+++ b/transfer.html
@@ -116,7 +116,7 @@
                     </tr>
                 
                     <tr class="ft12">
-                        <td scope="col" width="20%">标题</td>
+                        <td scope="col" width="20%" class="xmm"><img src="images/ico-shidirenzheng.png" /><a href="#"><span class="ft16">标题</span></a></td>
                         <td scope="col"><span class="ft18">11.00</span>%</td>
                         <td scope="col"><span class="ft18">¥ 90.000</span>元</td>
                         <td scope="col"><span class="ft18">1</span>期</td>
@@ -124,7 +124,7 @@
                         <td scope="col"><a class="tzbtn">投资</a></td>
                     </tr>
                     <tr class="ft12">
-                    <td scope="col" width="20%">标题</td>
+                    <td scope="col" width="20%" class="xmm"><img src="images/ico-xinyongrenzheng.png" /><a href="#"><span class="ft16">标题</span></a></td>
                     <td scope="col"><span class="ft18">11.00</span>%</td>
                     <td scope="col"><span class="ft18">¥ 90.000</span>元</td>
                     <td scope="col"><span class="ft18">1</span>期</td>
@@ -132,7 +132,7 @@
                     <td scope="col"><a class="tzbtn">详情</a></td>
                     </tr>
                     <tr class="ft12">
-                    <td scope="col" width="20%">标题</td>
+                    <td scope="col" width="20%" class="xmm"><img src="images/ico-jigoudanbao.png" /><a href="#"><span class="ft16">标题</span></a></td>
                     <td scope="col"><span class="ft18">11.00</span>%</td>
                     <td scope="col"><span class="ft18">¥ 90.000</span>元</td>
                     <td scope="col"><span class="ft18">1</span>期</td>
@@ -140,7 +140,7 @@
                     <td scope="col"><a class="tzbtn">投资</a></td>
                     </tr>
                     <tr class="ft12">
-                    <td scope="col" width="20%">标题</td>
+                    <td scope="col" width="20%" class="xmm"><img src="images/ico-jigoudanbao.png" /><a href="#"><span class="ft16">标题</span></a></td>
                     <td scope="col"><span class="ft18">11.00</span>%</td>
                     <td scope="col"><span class="ft18">¥ 90.000</span>元</td>
                     <td scope="col"><span class="ft18">1</span>期</td>
@@ -163,10 +163,10 @@
                     <dl class="friends clearfix"><dt><span class="c999">友情链接</span></dt><dd><a href="#">重庆斌鑫集团有限公司</a><a href="#">四川创业融资担保有限公司</a><a href="#">重庆海雄名车</a></dd></dl>
                 </div>
                 <div style="width:20%" class="tar fl">
-                    <img src="images/test-qrcode.jpg" style="width:100px;">
+                    <!-- <img src="images/test-qrcode.jpg" style="width:100px;"> -->
                 </div>
-                <div class="tac p20">版权所有 © 重庆骐特·金仓贷 粤ICP备14091442号</div>
                 <div class="clearfix"></div>
+                <div class="tac p20">版权所有 © 重庆骐特·金仓贷 粤ICP备14091442号</div>
             </div>
         </div>
 
