--- a/account-fund.html
+++ b/account-fund.html
@@ -144,7 +144,7 @@
                                 <td>2016-01-12</td>
                                 <td>20,000.00</td>
                                 <td>已成功</td>
-                                <td><a href="account-phone-modify.html" class="png btn"><span class="png">查看</span></a></td>
+                                <td><a href="#" class="png btn"><span class="png">查看</span></a></td>
                             </tr><tr>
                                 <td>201501120001</td>
                                 <td>买房！买房！买房！</td>
@@ -152,7 +152,7 @@
                                 <td>2016-01-12</td>
                                 <td>20,000.00</td>
                                 <td>已成功</td>
-                                <td><a href="account-phone-modify.html" class="png btn"><span class="png">查看</span></a></td>
+                                <td><a href="#" class="png btn"><span class="png">查看</span></a></td>
                             </tr><tr>
                                 <td>201501120001</td>
                                 <td>买房！买房！买房！</td>
@@ -160,7 +160,7 @@
                                 <td>2016-01-12</td>
                                 <td>20,000.00</td>
                                 <td>已成功</td>
-                                <td><a href="account-phone-modify.html" class="png btn"><span class="png">查看</span></a></td>
+                                <td><a href="#" class="png btn"><span class="png">查看</span></a></td>
                             </tr>
                         </tbody>
                     </table>
